Run Pekko app; dev OK, krb fails